LOGCXX-129: Windows build fixes for async rewrite